--- a/test.ipynb
+++ b/test.ipynb
@@ -7,10 +7,10 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from pyExtremeHelper import pyExtremeHelper  # Asumiendo que la clase está en helper.py\n",
-    "pyExtremeHelper = pyExtremeHelper()\n",
+    "from cosmic import cosmic  # Asumiendo que la clase está en helper.py\n",
+    "cosmic = cosmic()\n",
     "# Llamada al método estático para leer el archivo .dat y crear el DataFrame\n",
-    "df = pyExtremeHelper.ler_arquivo_dat(\"utils/C1_CP_FGM_FULL/data.dat\")"
+    "df = cosmic.ler_arquivo_dat(\"utils/C1_CP_FGM_FULL/data.dat\")"
    ]
   },
   {
@@ -330,10 +330,10 @@
     "import pandas as pd\n",
     "\n",
     "# Carregar os datasets\n",
-    "data_1 = pyExtremeHelper.ler_arquivo_dat(\"utils/C1_CP_FGM_FULL/data.dat\")\n",
-    "data_2 = pyExtremeHelper.ler_arquivo_dat(\"utils/C2_CP_FGM_FULL/C2_CP_FGM_FULL__20010213_104200_20010213_105000_V140306.cef\")\n",
-    "data_3 = pyExtremeHelper.ler_arquivo_dat(\"utils/C3_CP_FGM_FULL/C3_CP_FGM_FULL__20010213_104200_20010213_105000_V140305.cef\")\n",
-    "data_4 = pyExtremeHelper.ler_arquivo_dat(\"utils/C4_CP_FGM_FULL/C4_CP_FGM_FULL__20010213_104200_20010213_105000_V140305.cef\")\n",
+    "data_1 = cosmic.ler_arquivo_dat(\"utils/C1_CP_FGM_FULL/data.dat\")\n",
+    "data_2 = cosmic.ler_arquivo_dat(\"utils/C2_CP_FGM_FULL/C2_CP_FGM_FULL__20010213_104200_20010213_105000_V140306.cef\")\n",
+    "data_3 = cosmic.ler_arquivo_dat(\"utils/C3_CP_FGM_FULL/C3_CP_FGM_FULL__20010213_104200_20010213_105000_V140305.cef\")\n",
+    "data_4 = cosmic.ler_arquivo_dat(\"utils/C4_CP_FGM_FULL/C4_CP_FGM_FULL__20010213_104200_20010213_105000_V140305.cef\")\n",
     "\n",
     "# Extrair valores relevantes dos datasets\n"
    ]
@@ -844,7 +844,7 @@
    ],
    "source": [
     "\n",
-    "curl = pyExtremeHelper.curlometer(data_1, data_2, data_3, data_4)\n",
+    "curl = cosmic.curlometer(data_1, data_2, data_3, data_4)\n",
     "curl.plot()"
    ]
   },
@@ -884,18 +884,18 @@
     "\n",
     "\n",
     "# Calculate mod_B\n",
-    "yy = pyExtremeHelper.calculate_mod_B(data_1, Bx_column, By_column, Bz_column)\n",
+    "yy = cosmic.calculate_mod_B(data_1, Bx_column, By_column, Bz_column)\n",
     "\n",
     "# Plot mod_B\n",
-    "pyExtremeHelper.plot_mod_B(yy)\n",
+    "cosmic.plot_mod_B(yy)\n",
     "\n",
     "# Save mod_B to a file\n",
     "#yy.to_csv('mod_B.dat', sep='\\t', header=False, index=False)\n",
     "\n",
-    "PVI = pyExtremeHelper.calculate_PVI(yy)\n",
+    "PVI = cosmic.calculate_PVI(yy)\n",
     "\n",
     "# Plot the PVI\n",
-    "pyExtremeHelper.plot_data(PVI)\n",
+    "cosmic.plot_data(PVI)\n",
     "\n"
    ]
   },
@@ -906,7 +906,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "detected = pyExtremeHelper.limethod(PVI)\n"
+    "detected = cosmic.limethod(PVI)\n"
    ]
   },
   {
@@ -966,7 +966,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "current_density = np.loadtxt('utils/current_sheet/current_density.dat', converters={0: pyExtremeHelper.convert_to_float})\n"
+    "current_density = np.loadtxt('utils/current_sheet/current_density.dat', converters={0: cosmic.convert_to_float})\n"
    ]
   },
   {
@@ -999,7 +999,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/bruno/pyExtremeHelper/pyExtremeHelper/helper.py:240: SettingWithCopyWarning: \n",
+      "/home/bruno/cosmic/cosmic/helper.py:240: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1030,7 +1030,7 @@
    ],
    "source": [
     "\n",
-    "volat = pyExtremeHelper.calculate_magnetic_volatility(pd.DataFrame(yy, columns=[\"mag\"]), \"mag\", 100, 100)\n",
+    "volat = cosmic.calculate_magnetic_volatility(pd.DataFrame(yy, columns=[\"mag\"]), \"mag\", 100, 100)\n",
     "volat.plot()"
    ]
   },
@@ -1043,9 +1043,9 @@
     "\n",
     "sigma = 50.0\n",
     "\n",
-    "smoothed_curl = pyExtremeHelper.apply_gaussian_kernel(current_density, sigma)\n",
-    "smoothed_pvi = pyExtremeHelper.apply_gaussian_kernel(PVI, sigma)\n",
-    "smoothed_volat = pyExtremeHelper.apply_gaussian_kernel(volat, sigma)\n",
+    "smoothed_curl = cosmic.apply_gaussian_kernel(current_density, sigma)\n",
+    "smoothed_pvi = cosmic.apply_gaussian_kernel(PVI, sigma)\n",
+    "smoothed_volat = cosmic.apply_gaussian_kernel(volat, sigma)\n",
     "\n"
    ]
   },
